--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,98 @@
+@import url("https://fonts.googleapis.com/css2?family=Dosis&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Dosis", sans-serif;
+  background-image: linear-gradient(
+    to right top,
+    #dbfc79,
+    #ffe88c,
+    #feb882,
+    #fa8257,
+    #ff5425
+  );
+  background-attachment: fixed;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-size: 5rem;
+}
+
+#score {
+  font-size: 2rem;
+}
+.circles {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 800px;
+  justify-content: space-between;
+}
+
+.circle {
+  height: 150px;
+  width: 150px;
+  background-color: rgb(187, 187, 187);
+  border-radius: 50%;
+  margin: 1rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  font-family: inherit;
+  font-size: inherit;
+  background-color: #f3f3f3;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  margin: 1rem;
+  cursor: pointer;
+}
+
+#overlay {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background-color: white;
+  padding: 2rem;
+  width: 40%;
+  height: 25%;
+  border-radius: 10px;
+  position: relative;
+}
+
+.modal button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+}
+
+#result {
+  font-size: 1.5rem;
+}
+
+.circle.active {
+  /* background-color: #fff225; */
+  background: url("1329309424.png") no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+#stop {
+  display: none;
 }
