--- a/src/index.css
+++ b/src/index.css
@@ -23,22 +23,31 @@ h1 {
 }
 .circles {
   display: flex;
-  flex-wrap: wrap;
   margin: 0 auto;
-  width: 800px;
+  max-width: 900px;
   justify-content: space-between;
+}
+
+@media (max-width: 743px) {
+  .circles {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .circle {
   height: 150px;
   width: 150px;
-  background-color: rgb(187, 187, 187);
+  background-color: rgba(187, 187, 187, 0.746);
   border-radius: 50%;
   margin: 1rem;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0px 1px 3px 1px #000000cd;
+  font-size: 30px;
 }
 
 button {
@@ -50,10 +59,14 @@ button {
   border-radius: 5px;
   margin: 1rem;
   cursor: pointer;
+  box-shadow: 0px 1px 2px 1px #00000085;
+}
+
+button:hover {
+  transform: scale(1.05);
 }
 
 #overlay {
-  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
@@ -91,6 +104,7 @@ button {
   background: url("1329309424.png") no-repeat;
   background-position: center;
   background-size: cover;
+  background-color: rgba(219, 63, 63, 0.845);
 }
 
 #stop {
